version/0.9/_sources/examples/gallery_examples/01-project-configuration/update_part_location.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\gallery_examples\01-project-configuration\update_part_location.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_01-project-configuration_update_part_location.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_01-project-configuration_update_part_location.py:


.. _ref_update_part_location:

=====================
Update Part Locations
=====================

This example demonstrates how to connect to the Sherlock gRPC service, import a project,
and update part locations.

Description
-----------
Sherlock's gRPC API allows users to automate workflows such as updating part
locations for CCAs.
This script shows how to:
- Connect to the Sherlock service.
- Import a project.
- Update part locations.

The updated part locations can be used for accurate placement validation and optimization.

.. GENERATED FROM PYTHON SOURCE LINES 40-52

.. code-block:: Python



    import os

    from examples.examples_globals import get_sherlock_tutorial_path

    from ansys.sherlock.core import launcher
    from ansys.sherlock.core.errors import (
        SherlockImportProjectZipArchiveError,
        SherlockUpdatePartsLocationsError,
    )


.. GENERATED FROM PYTHON SOURCE LINES 54-57

Connect to Sherlock
===================
Connect to the Sherlock service and ensure proper initialization.

.. GENERATED FROM PYTHON SOURCE LINES 57-60

.. code-block:: Python


    sherlock = launcher.connect(port=9092, timeout=10)


.. GENERATED FROM PYTHON SOURCE LINES 61-64

Delete Project
==============
Delete the project if it already exists.

.. GENERATED FROM PYTHON SOURCE LINES 64-71

.. code-block:: Python


    try:
        sherlock.project.delete_project("Test")
        print("Project deleted successfully.")
    except Exception:
        pass


.. GENERATED FROM PYTHON SOURCE LINES 72-75

Import Tutorial Project
========================
Import the tutorial project zip archive from the Sherlock tutorial directory.

.. GENERATED FROM PYTHON SOURCE LINES 75-86

.. code-block:: Python


    try:
        sherlock.project.import_project_zip_archive(
            project="Test",
            category="Demos",
            archive_file=os.path.join(get_sherlock_tutorial_path(), "Tutorial Project.zip"),
        )
        print("Tutorial project imported successfully.")
    except SherlockImportProjectZipArchiveError as e:
        print(f"Error importing project zip archive: {e}")


.. GENERATED FROM PYTHON SOURCE LINES 87-90

Update Part Locations
=====================
Update the part locations for the "Card" of the "Test" project.

.. GENERATED FROM PYTHON SOURCE LINES 90-104

.. code-block:: Python


    try:
        part_locations = [
            ("C1", "-2.7", "-1.65", "0", "in", "TOP", "False"),
            ("J1", "-3.55", "-2.220446049250313E-16", "90", "in", "TOP", "False"),
        ]
        sherlock.parts.update_parts_locations(
            project="Test",
            cca_name="Main Board",
            part_loc=part_locations,
        )
        print("Part locations updated successfully.")
    except SherlockUpdatePartsLocationsError as e:
        print(f"Error updating part locations: {e}")


.. _sphx_glr_download_examples_gallery_examples_01-project-configuration_update_part_location.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: update_part_location.ipynb <update_part_location.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: update_part_location.py <update_part_location.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: update_part_location.zip <update_part_location.zip>`
